Proportional Editing Significant Glitch, Object Mode #31842

Closed
opened 2012-06-16 14:03:08 +02:00 by Nathaniel de Bell · 8 comments

%%%Upon using proportional editing within Object Mode there appears to be an issue relating to the manipulation of the size of the proportion circle. Namely, after transformation and then subsequent exclusion of objects from the circle, (by decreasing its size) it is expected that these objects return to their original position as is evident within Edit Mode when manipulating vertices. However, within Object Mode the meshes tend to incorrectly reset position, so that prior to and after denying/applying the action the representation of the objects is significantly different then that of the original placement. Though it is evident using all falloff types, the incorrect effect is best illustrated when using the constant interpolation. Included within the message is an image which may further aid with interpretation of the issue. Within the upper-left panel I have displayed the objects, ten cubes neatly aligned in a row. Within the upper-right panel I have used a constant falloff to transform some of the cubes a small distance positively upon the z axis. Within the lower-left panel I have decreased the size of the circle and moved the selection negatively upon the z axis, note that this not a separate transformation of the objects. Within the lower-right panel instead of confirming the actions I have instead cancelled them, note that the four elevated cubes have not returned to their original positions. Thank you very much for your time and effort.

Regards,
Nathaniel de Bell%%%

%%%Upon using proportional editing within Object Mode there appears to be an issue relating to the manipulation of the size of the proportion circle. Namely, after transformation and then subsequent exclusion of objects from the circle, (by decreasing its size) it is expected that these objects return to their original position as is evident within Edit Mode when manipulating vertices. However, within Object Mode the meshes tend to incorrectly reset position, so that prior to and after denying/applying the action the representation of the objects is significantly different then that of the original placement. Though it is evident using all falloff types, the incorrect effect is best illustrated when using the constant interpolation. Included within the message is an image which may further aid with interpretation of the issue. Within the upper-left panel I have displayed the objects, ten cubes neatly aligned in a row. Within the upper-right panel I have used a constant falloff to transform some of the cubes a small distance positively upon the z axis. Within the lower-left panel I have decreased the size of the circle and moved the selection negatively upon the z axis, note that this not a separate transformation of the objects. Within the lower-right panel instead of confirming the actions I have instead cancelled them, note that the four elevated cubes have not returned to their original positions. Thank you very much for your time and effort. Regards, Nathaniel de Bell%%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%I had a go at this (for fun) and found a potential fix in transform_generics.c:
Have a look at the attached patch with some more info.

BUT BEWARE: I am a newbee, transform code is complex and is used all over the place, and I have only done so much testing... actually I'm pretty sure there is a better fix
but will put this out as a suggestion...%%%

%%%I had a go at this (for fun) and found a potential fix in transform_generics.c: Have a look at the attached patch with some more info. BUT BEWARE: I am a newbee, transform code is complex and is used all over the place, and I have only done so much testing... actually I'm pretty sure there is a better fix but will put this out as a suggestion...%%%

%%%Martin, are you around to look into this?%%%

%%%Martin, are you around to look into this?%%%
%%%Fixed duplicate report http://projects.blender.org/tracker/?func=detail&atid=498&aid=32000&group_id=9%%%
Member

%%%re-assign to self. %%%

%%%re-assign to self. %%%
Member

%%%Tested patch, and it works as expected. The code wrongly sets TD_NOACTION during changing a circle.
Fix goes to svn.

Phillipp: thanks for finding this, and sorry it took so long :)%%%

%%%Tested patch, and it works as expected. The code wrongly sets TD_NOACTION during changing a circle. Fix goes to svn. Phillipp: thanks for finding this, and sorry it took so long :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

%%%@Ton: thanx for commiting this! I just hope it doesnt break elsewhere. Well I'll try to fix it again then :)

about taking long: no worries at all! I myself have a lot on the TODO for Blender and dont find time for it unfortunately due to other work :(
and if you compare 4 months to the typical A*esk response time, Blender devs are still miles ahead :)
[and I'm not even talking about most of the bugs which are fixed very quickly within a week or so]

Hope to find time to dive into Blender code again soon ;)
Cheers
Philipp%%%

%%%@Ton: thanx for commiting this! I just hope it doesnt break elsewhere. Well I'll try to fix it again then :) about taking long: no worries at all! I myself have a lot on the TODO for Blender and dont find time for it unfortunately due to other work :( and if you compare 4 months to the typical A*esk response time, Blender devs are still miles ahead :) [and I'm not even talking about most of the bugs which are fixed very quickly within a week or so] Hope to find time to dive into Blender code again soon ;) Cheers Philipp%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#31842
No description provided.