Bugfix #31842

Proportional editing of Objects in Object Mode didn't reset positions when
changing the circle influence size. Fix provided by Phillipp Oeser. Thanks!